fix: sub color more close to bg and text color with more contrast

--- a/frontend/static/themes/intellij_darcula.css
+++ b/frontend/static/themes/intellij_darcula.css
@@ -3,8 +3,8 @@
   --main-color: #CC8242;
   --caret-color: #CC8261;
   --sub-color: #CCCCBA;
-  --sub-alt-color: #7A9ECA;
-  --text-color: #CCCCDA;
+  --sub-alt-color: #303030;
+  --text-color: #FFB66D;
   --error-color: #f44909;
   --error-extra-color: #f44747;
   --colorful-error-color: #f44747;
